--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,8 @@
   </head>
   <body>
     <video id="video" width="640" height="480" autoplay></video>
-    <button id="snap" onclick="onSave()">Take Picture</button>
+    <button onclick="onSave()">Take Picture</button>
+    <button onclick="onSaveHin()">Take Picture(Hin)</button>
     <button id="btnGiveCommand">Start Recognition</button>
     <h1 id="message"></h1>
 
