--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
-    <script src="https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js"></script>
-  </head>
-  <body>
-    <video id="video" width="640" height="480" autoplay></video>
-    <button onclick="onSave()">Take Picture</button>
-    <button onclick="onSaveHin()">Take Picture(Hin)</button>
-    <button id="btnGiveCommand">Start Recognition</button>
-    <h1 id="message"></h1>
+   <head>
+      <style>
+         .bw {
+            filter: grayscale();
+         }
+      </style>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>Static Template</title>
+      <script src="tesseract.js"></script>
+   </head>
+   <body>
+      <video
+         id="video"
+         width="640"
+         height="480"
+         autoplay
+         controls
+         class="bw"
+      ></video>
+      <button onclick="onSave()">Take Picture</button>
+      <button onclick="onSaveHin()">Take Picture(Hin)</button>
+      <button onclick="endSpeech()">End Speech</button>
+      <button id="btnGiveCommand">Start Recognition</button>
+      <h1 id="message"></h1>
 
-    <canvas id="canvas" width="640" height="480"></canvas>
+      <canvas id="canvas" width="640" height="480"></canvas>
 
-    <script src="app.js"></script>
-  </body>
+      <script src="app.js"></script>
+   </body>
 </html>
