File Struct + Word Dict

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <title>Static Template</title>
-      <script src="tesseract.js"></script>
+      <script src="src/tesseract.js"></script>
+      <script src="src/typo.js"></script>
+      <script src="src/words.js"></script>
    </head>
    <body>
       <video
@@ -29,6 +31,6 @@
 
       <canvas id="canvas" width="640" height="480"></canvas>
 
-      <script src="app.js"></script>
+      <script src="src/app.js"></script>
    </body>
 </html>
